--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -27,6 +27,19 @@ layout: default
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
           {% if page.title %}<h1 class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
+
+          {% if page.authors %}
+            <p class="page__meta" style="font-size: 1.1em;">
+              {% assign authors_bold = page.authors | replace: "Wenxuan Yuan", "<strong>Wenxuan Yuan</strong>" %}
+              {% assign authors_bold = authors_bold | replace: "Yuan, Wenxuan", "<strong>Yuan, Wenxuan</strong>" %}
+              {% assign authors_bold = authors_bold | replace: "W. Yuan", "<strong>W. Yuan</strong>" %}
+              {% assign authors_bold = authors_bold | replace: "Yuan, W.", "<strong>Yuan, W.</strong>" %}
+              {% assign authors_bold = authors_bold | replace: "YUAN Wenxuan", "<strong>YUAN Wenxuan</strong>" %}
+              {% assign authors_bold = authors_bold | replace: "Yuan W", "<strong>Yuan W</strong>" %}
+              {{ authors_bold }}
+            </p>
+          {% endif %}
+          
           {% if page.read_time %}
             <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
           {% endif %}
